Fixed visual/layout bug.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,8 +14,6 @@ header {
     display: flex;
     z-index: 9999;
     flex-wrap: wrap;
-    position: -webkit-sticky;
-    position: sticky;
     padding: 20px 30px 20px 30px ; 
     justify-content: space-between;
     background-color: rgb(40, 44, 52);  
@@ -96,29 +94,29 @@ header nav ul li a:hover{
 
   /*This is to move the container to the desired position*/
   #About_Me article {
-      left: 25%;
-      width: 75%;
-      top: -47vh;
+      margin-left: 25%;
+      display: flex;
       height: 45vh;
-      position: relative;
       background-image: linear-gradient(to right, rgba(207, 140, 16,0.8), rgb(40, 44, 52)) 
   }
 
   /*This is to move the img to the desired position.*/
   #About_Me img {
-      left: 13%;
+      margin-left: -15%;
       z-index: 1;
       width: 25%;
       height: 40vh;
-      position: relative;
-      margin: 10vh 0 4vh 0;
+      padding-top: 4vh;
+  }
+
+  #About_Me div {
+      padding-left: 2%;
   }
 
   #About_Me h2{
     width: 50%;
-    left: 25%;
+    left: 35%;
     font-size: 60px;
-    position: inherit;
     color: rgb(79, 62, 30);
   }
 
@@ -126,40 +124,39 @@ header nav ul li a:hover{
       left: 20%;
       width: 75%;
       font-size: 30px;
-      position: inherit;
       color: rgb(215, 168, 82);
   }
 
   /*This is to move the container to the desired position*/
   #Purpose article {
-    top: 10vh;
-    width: 75%;
+    margin-right: 25%;
+    display: flex;
     height: 45vh;
-    position: relative;
     background-image: linear-gradient(to right, rgb(40, 44, 52), rgba(207, 140, 16,0.8)) 
 }
 
 /*This is to move the img to the desired position.*/
 #Purpose img {
-    left: 63%;
-    width: 25%;
+    margin-right: -15%;
     z-index: 1;
-    top: -42.5vh;
+    width: 25%;
     height: 40vh;
-    position: relative;
-    margin: 10vh 0 4vh 0;
+    padding-top: 4vh;
+}
+
+#Purpose div {
+    padding-right: 2%;
 }
 
 #Purpose h2{
     width: 50%;
-    left: 63%;
+    margin-left: 80%;
     font-size: 60px;
-    position: inherit;
     color: rgb(79, 62, 30);
   }
 
   #Purpose p {
-    left: 5%;
+    margin-left: 20%;
     width: 75%;
     font-size: 30px;
     position: inherit;
@@ -168,44 +165,46 @@ header nav ul li a:hover{
 
 /*This is to move the container to the desired position*/
 #Featured_Project article {
-    left: 25%;
-    width: 75%;
-    top: -42vh;
-    height: 45vh;
-    position: relative;
-    background-image: linear-gradient(to right, rgba(207, 140, 16,0.8), rgb(40, 44, 52)) 
+    margin-left: 25%;
+      display: flex;
+      height: 45vh;
+      background-image: linear-gradient(to right, rgba(207, 140, 16,0.8), rgb(40, 44, 52))
 }
 
 /*This is to move the img to the desired position.*/
 #Featured_Project img {
-    left: 13%;
-    z-index: 1;
-    width: 25%;
-    height: 40vh;
-    top: 5vh;
-    position: relative;
-    margin: 10vh 0 4vh 0;
+    margin-left: -15%;
+      z-index: 1;
+      width: 25%;
+      height: 40vh;
+      padding-top: 4vh;
+}
+
+#Featured_Project div {
+    padding-left: 2%;
 }
 
 #Featured_Project h2{
     width: 50%;
-  left: 25%;
-  font-size: 60px;
-  position: inherit;
-  color: rgb(79, 62, 30);
+    left: 35%;
+    font-size: 60px;
+    color: rgb(79, 62, 30);
 }
 
 #Featured_Project p {
     left: 20%;
-    width: 75%;
-    font-size: 30px;
-    position: inherit;
-    color: rgb(215, 168, 82);
+      width: 75%;
+      font-size: 30px;
+      color: rgb(215, 168, 82);
 }
 
-#Web_Apps_Sites article {
-    margin: 80px;
-    display: flex;
+#Web_Apps_Sites article,
+#Ongoing_Projects article,
+#Other_Projects article {
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-bottom: 40px;
+    display: inline-flexbox;
     flex-wrap: wrap;
     justify-content: center;
     background-image: linear-gradient(to bottom, rgba(207, 140, 16,0.8), rgb(40, 44, 52)) 
@@ -230,83 +229,17 @@ header nav ul li a:hover{
 }
 
 /*This section styles the header of the web apps/sites article.*/
-#Web_Apps_Sites h2 {
-    top: 16vh;
-    z-index: 1;
-    font-size: 60px;
-    position: relative;
-    text-align: center;
-    color: rgb(79, 62, 30);
-}
-
-/*The following two sections are to create equal spacing around the images.*/
-#Web_Apps_Sites .first_row {
-    margin-top: 12vh;
-}
-
-#Web_Apps_Sites .second_row {
-    margin-top: 2vh;
-}
-
-/*This section styles the header of the ongoing projects article.*/
-#Ongoing_Projects article {
-    justify-content: center;
-    margin: 80px;
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    top: -15vh;
-    background-image: linear-gradient(to bottom, rgba(207, 140, 16,0.8), rgb(40, 44, 52)) 
-}
-
-#Ongoing_Projects h2 {
-    top: 1vh;
-    z-index: 1;
-    font-size: 60px;
-    position: relative;
-    text-align: center;
-    color: rgb(79, 62, 30);
-}
-
-#Ongoing_Projects .first_row {
-    margin-top: 12vh;
-}
-
-#Ongoing_Prohects .second_row {
-    margin-top: 2vh;
-}
-
-/*This section styles the header of the ongoing projects article.*/
-#Other_Projects article {
-    justify-content: center;
-    margin: 80px;
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    top: -29.5vh;
-    background-image: linear-gradient(to bottom, rgba(207, 140, 16,0.8), rgb(40, 44, 52)) 
-}
-
+#Web_Apps_Sites h2,
+#Ongoing_Projects h2,
 #Other_Projects h2 {
-    top: -13vh;
     z-index: 1;
     font-size: 60px;
-    position: relative;
     text-align: center;
     color: rgb(79, 62, 30);
-}
-
-#Other_Projects .first_row {
-    margin-top: 12vh;
-}
-
-#Other_Projects .second_row {
-    margin-top: 2vh;
 }
 
 #Contact_Info article {
     margin: 0 80px 0 80px;
-    position: relative;
     top: -30vh;
     padding: 40px 0 0 0;
     background-image: linear-gradient(to bottom, rgba(207, 140, 16,0.8), rgb(40, 44, 52))
@@ -316,14 +249,12 @@ header nav ul li a:hover{
     top: -2vh;
     z-index: 1;
     font-size: 60px;
-    position: relative;
     text-align: center;
     color: rgb(79, 62, 30);
 }
 
 #Contact_Info p {
     font-size: 30px;
-    position: relative;
     top: -2vh;
     margin-left: 30px;
     color: rgb(215, 168, 82);
@@ -344,4 +275,20 @@ header nav ul li a:hover{
 
 #Contact_Info a:hover {
     color: rgb(207, 140, 16);
+}
+
+footer {
+    text-align: center;
+    font-size: 20px;
+    padding: 20px 0 20px 0;
+}
+
+footer a {
+    
+    text-decoration: none;
+    color: rgb(207, 140, 16);
+}
+
+footer a:hover {
+    color: rgb(79, 62, 30);
 }
